# cpp-project-skeleton

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.org  clean.sh  conanfile.txt
src/: main.cc  point.cc  point.hh
test/: point-test.cc
